# braindump

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: feature-development.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/feature-development/: SKILL.md
.claude/skills/migration-guard/: SKILL.md
.claude/skills/package-structure/: SKILL.md
.claude/skills/python-dev/: SKILL.md  python_template.md
.claude/skills/react-dev/: SKILL.md
.github/workflows/: pr.yml  publish.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  auth.tsx  types.ts  utils.ts
frontend/src/components/: DailiesView.css  DailiesView.tsx  ErrorToast.css  ErrorToast.tsx  ErrorToastContext.ts  GraphView.css  GraphView.tsx  HeaderBar.css  HeaderBar.tsx  HierarchyView.css  HierarchyView.tsx  LoginPage.css  LoginPage.tsx  MarkdownPreview.css  MarkdownPreview.tsx  NavBar.css  NavBar.tsx  QueryBar.css  QueryBar.tsx  SearchBar.css  SearchBar.tsx  SpikeDetail.css  SpikeDetail.tsx  SpikeEditor.css  SpikeEditor.tsx  SpikeList.css  SpikeList.tsx  StatusBar.css  StatusBar.tsx  StreamSummaryPanel.css  StreamSummaryPanel.tsx  StreamsView.css  StreamsView.tsx  TagsInput.css  TagsInput.tsx
src/braindump/: __init__.py  app.py  chats.py  dailies.py  daily_summary.py  dirs.py  health.py  llm.py  main.py  migrations.py  query.py  storage.py  stream_summary.py  streams.py  txlog.py  types.py  users.py  wiki.py
tauri_app/: braindump_entry.py  build.sh  package-lock.json  package.json
tauri_app/src/: index.html
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_app.py  test_auth.py  test_health.py  test_llm.py  test_main.py  test_migrations.py  test_query.py  test_storage.py  test_users.py  test_wiki.py
tools/: check.py  hatch_build.py
