[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/braindump"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the compiled frontend into the installed package.
"frontend/dist" = "braindump/frontend/dist"

[tool.hatch.build.hooks.custom]
path = "tools/hatch_build.py"

[project]
name = "braindump-ai"
version = "0.1.1"
description = "Local-first, AI-powered knowledge management app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "mistune>=3.2.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "uvicorn[standard]>=0.42.0",
    "claude-agent-sdk>=0.1.50",
]

[project.urls]
Repository = "https://github.com/amhellmund/braindump"

[project.scripts]
braindump = "braindump.main:run"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "tabulate>=0.10.0",
    "ty>=0.0.24",
    "yachalk>=0.1.8",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (basic security in ruff)
    "ANN", # flake8-annotations (type hint enforcement)
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"] # allow assert and unannotated test helpers
"src/braindump/types.py" = [
    "N815",
] # camelCase fields intentional — match frontend JSON keys

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty
# ---------------------------------------------------------------------------
[tool.ty.rules]
# strict mode — enable all optional checks
unknown-argument = "error"
unresolved-import = "error"
division-by-zero = "error"
invalid-return-type = "error"
missing-argument = "error"
redundant-cast = "error"

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
recursive = true
exclude_dirs = ["tests", ".venv"]
skips = []                        # no rule skips — strict
level = "MEDIUM"                  # report medium and above
confidence = "MEDIUM"
