[package]
name = "braindump-tauri"
version = "0.2.1"
edition = "2021"
description = "braindump desktop app (Tauri wrapper)"

[lib]
name = "braindump_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
dirs = "5"
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
